--- a/src/components/modules/admin/layout/sidebar/index.scss
+++ b/src/components/modules/admin/layout/sidebar/index.scss
@@ -1,6 +1,5 @@
 @import '../../../../../assets/styles/mixins.scss';
 
-
 $sidebar-links-color: #425669;
 $main-font-family: Inter, sans-serif;
 $border-buttom-color: #f4f4f6;
@@ -157,6 +156,106 @@ $navlink-bg: #0e2557;
         font-weight: 600;
       }
       .email {
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .sidebar {
+    .admin-panel {
+      padding-bottom: 1rem;
+
+      .admin-panel-links {
+        .logo {
+          margin-top: 16px;
+        }
+
+        .navlinks {
+          height: auto;
+
+          .links-container {
+            .first-navlinks,
+            .second-navlinks {
+              padding: 1rem;
+              ul {
+                gap: 0.5rem;
+                a {
+                  padding: 0.5rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .sidebar-profile {
+      margin-top: 1rem;
+      padding: 1rem;
+      flex-direction: column;
+      gap: 0.5rem;
+
+      .name {
+        width: 20px;
+        height: 20px;
+        padding: 0.5rem;
+      }
+
+      .details {
+        .user-name {
+          font-size: 0.9rem;
+        }
+        .email {
+          font-size: 0.8rem;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .sidebar {
+    .admin-panel {
+      .admin-panel-links {
+        .logo {
+          margin-top: 8px;
+        }
+
+        .navlinks {
+          .links-container {
+            .first-navlinks,
+            .second-navlinks {
+              padding: 0.5rem;
+              ul {
+                gap: 0.3rem;
+                a {
+                  padding: 0.3rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .sidebar-profile {
+      padding: 0.5rem;
+      gap: 0.3rem;
+
+      .name {
+        width: 15px;
+        height: 15px;
+        padding: 0.3rem;
+      }
+
+      .details {
+        .user-name {
+          font-size: 0.8rem;
+        }
+        .email {
+          font-size: 0.7rem;
+        }
       }
     }
   }
