--- a/src/components/modules/admin/templatesDownload/index.scss
+++ b/src/components/modules/admin/templatesDownload/index.scss
@@ -12,76 +12,6 @@ $input-border-radius: 4px;
   $input-border: 1px solid #f0ecf5;
   $input-padding: 0.7rem 2.4rem;
 }
-// Responsive styles
-// @media (max-width: 768px) {
-//   .controls {
-//     flex-direction: column;
-//     align-items: stretch;
-//     padding: 0;
-
-//     .control-item {
-//       margin-bottom: 10px;
-//       flex: 1;
-//       justify-content: center;
-//     }
-
-//     .search-div {
-//       .search-bar {
-//         width: 100%;
-//         position: relative;
-//         input {
-//           width: calc(100% - 2.4rem); // Adjust for padding
-//           padding-left: 2.5rem; // Adjust padding to accommodate the search icon
-//         }
-//         .search-icon {
-//           position: absolute;
-//           left: 0.5rem;
-//           top: 50%;
-//           transform: translateY(-50%);
-//         }
-//       }
-//     }
-
-//     .filter-dropdown {
-//       select {
-//         width: 90%;
-//         margin-left: 1rem;
-//       }
-//     }
-
-//     .date-filters {
-//       display: flex;
-//       flex-direction: column;
-//       align-items: center;
-
-//       form {
-//         width: 100%;
-//         position: relative;
-//         input {
-//           width: 100%; // Adjust for padding
-//           padding-left: 2.5rem;
-//           margin-bottom: 0.5rem;
-//         }
-//         .calendar-icon {
-//           position: absolute;
-//           left: 0.5rem;
-//           top: 50%;
-//           transform: translateY(-50%);
-//         }
-//       }
-
-//       span {
-//         display: none; // Hide the separator on small screens
-//       }
-//     }
-//   }
-// }
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
 .controls {
   display: flex;
@@ -342,3 +272,177 @@ $input-border-radius: 4px;
 //     }
 //   }
 // }
+
+@media (max-width: 768px) {
+  .controls {
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0;
+    .control-item {
+      margin-bottom: 10px;
+      flex: 1;
+      justify-content: center;
+    }
+    .search-div {
+      .search-bar {
+        width: 100%;
+        position: relative;
+        input {
+          // width: calc(100% - 2.4rem); // Adjust for padding
+          width: 100%;
+          padding-left: 2.5rem; // Adjust padding to accommodate the search icon
+        }
+        .search-icon {
+          position: absolute;
+          left: 0.5rem;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+    }
+    .filter-dropdown {
+      select {
+        width: 90%;
+        margin-left: 1rem;
+      }
+    }
+    .date-filters {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      form {
+        width: 100%;
+        position: relative;
+        input {
+          width: 100%; // Adjust for padding
+          padding-left: 2.5rem;
+          margin-bottom: 0.5rem;
+        }
+        .calendar-icon {
+          position: absolute;
+          left: 0.5rem;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+      span {
+        display: none; // Hide the separator on small screens
+      }
+    }
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .controls {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
+    padding: 0;
+
+    .control-item {
+      align-items: center;
+      padding: 0;
+      justify-content: center;
+    }
+
+    .search-div {
+      .search-bar {
+        width: 100%;
+        position: relative;
+        input {
+          width: 100%;
+          padding-left: 2.5rem;
+        }
+        .search-icon {
+          position: absolute;
+          left: 10px;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+    }
+
+    .filter-dropdown {
+      select {
+        width: 100%;
+        padding: 0.7rem 1rem;
+      }
+    }
+
+    .date-filters {
+      form {
+        position: relative;
+        input {
+          width: 100%;
+          padding: 0.7rem 2.1rem;
+        }
+        .calendar-icon {
+          position: absolute;
+          left: 10px;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+      span {
+        display: none;
+      }
+    }
+  }
+}
+
+@media (min-width: 820px) and (max-width: 1024px) {
+  .controls {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0;
+
+    .control-item {
+      margin-bottom: 10px;
+    }
+
+    .search-div {
+      .search-bar {
+        width: 100%;
+        position: relative;
+        input {
+          width: calc(100% - 2.5rem);
+          padding-left: 2.5rem;
+        }
+        .search-icon {
+          position: absolute;
+          left: 10px;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+    }
+
+    .filter-dropdown {
+      select {
+        width: 100%;
+        margin-left: 0;
+      }
+    }
+
+    .date-filters {
+      form {
+        width: 100%;
+        position: relative;
+        input {
+          width: 100%;
+          padding-left: 2.5rem;
+        }
+        .calendar-icon {
+          position: absolute;
+          left: 10px;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+      span {
+        display: none;
+      }
+    }
+  }
+}
