--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -139,7 +139,8 @@
     border: 1px solid #f6f6f6;
     min-height: 100vh;
     margin: 0 auto;
-    max-width: 512px;
+    // max-width: 512px;
+    max-width: 90%;
 
     @include mobile(1105px) {
       min-height: 50vh;
@@ -152,6 +153,7 @@
     &__text {
       max-width: 260px;
       opacity: 30%;
+      overflow: hidden;
       text-align: center;
     }
   }
