--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -151,7 +151,7 @@
     }
 
     &__text {
-      max-width: 260px;
+      max-width: 80%;
       opacity: 30%;
       overflow: hidden;
       text-align: center;
