--- a/src/components/modules/admin/templatesAll/index.scss
+++ b/src/components/modules/admin/templatesAll/index.scss
@@ -1,44 +1,3 @@
-.search-bar {
-  position: relative;
-  //width: 100%; /* Ensure the search bar takes full width */
-  margin-bottom: 1rem;
-
-  input {
-    padding: 0.7rem 2.4rem;
-    border-radius: 4px;
-    background-color: #fff;
-    border: 1px solid #f0ecf5;
-  //  width: 100%; /* Ensure the input takes full width */
-  }
-
-  .search-icon {
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-}
-
-@media (max-width: 768px) {
-  .search-bar {
-    margin-bottom: 1rem; /* Adjust margin for better spacing */
-    input {
-      padding-left: 2.5rem; /* Adjust padding for search icon */
-    }
-    .search-icon {
-      left: 0.5rem; /* Adjust position of search icon */
-    }
-  }
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-  .search-bar {
-    margin-bottom: 1rem; /* Adjust margin for better spacing */
-    input {
-      padding-left: 2.5rem; /* Adjust padding for search icon */
-    }
-    .search-icon {
-      left: 10px; /* Adjust position of search icon */
-    }
-  }
+.table-section {
+  margin-top: 1rem !important;
 }
