--- a/src/components/modules/admin/templatesDownload/index.scss
+++ b/src/components/modules/admin/templatesDownload/index.scss
@@ -4,44 +4,31 @@
 
 $input-border-radius: 4px;
 
-//@extend %main-font-family;
-//font-size: 16px;
-
 %input-styles {
   $input-background-color: #f0f2f3;
   $input-border: 1px solid #f0ecf5;
   $input-padding: 0.7rem 2.4rem;
 }
 
+%filter-styles {
+  font-family: $main-font-family;
+  color: #727272;
+}
+
 .controls {
   display: flex;
-  //justify-content: start;
-  //align-items: flex-start;
   margin-bottom: 20px;
-  //padding: 10px;
   border-radius: 5px;
   flex-wrap: wrap;
-  //padding-right: 2rem;
+
   .control-item {
     display: flex;
     align-items: center;
     padding: 0 1rem;
-    //margin-right: 0.5rem;
-    // display: inline-flex;
-    // flex-wrap: wrap-reverse;
   }
 
   .search-div {
-    //background-color: #f9fafa;
-    // border: 1px solid #bcc6cc26;
-    // margin-right: 48px;
-    // padding: 10px 2rem;
-    // width: 100%;
-    // display: flex;
-    // border-radius: 4px;
-
     .search-bar {
-      //  margin-right: 0.1rem;
       background-color: #f9fafa;
 
       input {
@@ -62,10 +49,12 @@ $input-border-radius: 4px;
 
   .filter-dropdown {
     select {
-      padding: 0.7rem 3rem;
+      width: 14rem;
+      padding: 0.7rem 1rem;
       border-radius: $input-border-radius;
       background-color: #f0f2f3;
       @extend %input-styles;
+      @extend %filter-styles;
 
       option {
         margin-right: 2rem;
@@ -74,41 +63,6 @@ $input-border-radius: 4px;
       }
     }
   }
-
-  // .date-filters {
-  //   display: flex;
-  //   align-items: center;
-  //   @extend %input-styles;
-
-  //   span {
-  //     display: inline-block;
-  //     margin: 0 0rem;
-  //   }
-
-  //   form {
-  //     position: relative;
-  //     margin-right: 0.5rem;
-  //     @extend %input-styles;
-
-  //     &:last-child {
-  //       margin-right: 0;
-  //     }
-
-  //     input {
-  //       @extend %input-styles;
-  //       width: 10rem;
-  //       padding-right: 2.5rem;
-  //       padding-left: 2.5rem;
-  //     }
-
-  //     .calendar-icon {
-  //       position: absolute;
-  //       left: 0.5rem;
-  //       top: 50%;
-  //       transform: translateY(-50%);
-  //     }
-  //   }
-  // }
 
   .date-filters {
     display: flex;
@@ -119,8 +73,7 @@ $input-border-radius: 4px;
       display: inline-block;
       margin: 0 0rem;
       margin-right: -1.7rem;
-      font-family: $main-font-family;
-      color: #727272;
+      @extend %filter-styles;
     }
 
     form {
@@ -131,14 +84,12 @@ $input-border-radius: 4px;
         margin-right: 0;
       }
 
-      input {
-        background-color: #f0f2f3; // Adding background color
-        border: 1px solid #f0ecf5; // Adding border
-        padding: 0.7rem 2.1rem; // Adding padding
+      .date-input {
+        background-color: #f0f2f3;
+        border: 1px solid #f0ecf5;
+        padding: 0.7rem 2.1rem;
         border-radius: 4px;
         width: 10rem;
-        // padding-right: 1.5rem;
-        // padding-left: 2.5rem;
       }
 
       .calendar-icon {
@@ -187,51 +138,212 @@ $input-border-radius: 4px;
   }
 }
 
+// @media (max-width: 768px) {
+//   .controls {
+//     flex-direction: column;
+//     align-items: stretch;
+//     padding: 0;
+//     .control-item {
+//       margin-bottom: 10px;
+//       flex: 1;
+//       justify-content: center;
+//     }
+//     // .search-div {
+//     //   .search-bar {
+//     //     width: 100%;
+//     //     position: relative;
+//     //     input {
+//     //       width: 100%;
+//     //       padding-left: 2.5rem;
+//     //     }
+//     //     .search-icon {
+//     //       position: absolute;
+//     //       left: 0.5rem;
+//     //       top: 50%;
+//     //       transform: translateY(-50%);
+//     //     }
+//     //   }
+//     // }
+//     .filter-dropdown {
+//       select {
+//         width: 90%;
+//         // margin-left: 1rem;
+//       }
+//     }
+//     .date-filters {
+//       display: flex;
+//       flex-direction: column;
+//       align-items: center;
+//       form {
+//         width: 100%;
+//         position: relative;
+//         .date-input {
+//           width: 100%;
+//           padding-left: 2.5rem;
+//           margin-bottom: 0.5rem;
+//         }
+//         .calendar-icon {
+//           position: absolute;
+//           left: 0.5rem;
+//           top: 50%;
+//           transform: translateY(-50%);
+//         }
+//       }
+//       span {
+//         display: none;
+//       }
+//     }
+//   }
+// }
+
+// @media (min-width: 769px) and (max-width: 1024px) {
+//   .controls {
+//     display: grid;
+//     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+//     gap: 1rem;
+//     padding: 0;
+
+//     .control-item {
+//       align-items: center;
+//       padding: 0;
+//       justify-content: center;
+//     }
+
+//     // .search-div {
+//     //   // .search-bar {
+//     //   //   width: 100%;
+//     //   //   position: relative;
+//     //   //   input {
+//     //   //     width: 100%;
+//     //   //     padding-left: 2.5rem;
+//     //   //   }
+//     //   //   .search-icon {
+//     //   //     position: absolute;
+//     //   //     left: 0.5rem;
+//     //   //     top: 50%;
+//     //   //     transform: translateY(-50%);
+//     //   //   }
+//     //   // }
+//     // }
+
+//     .filter-dropdown {
+//       select {
+//         width: 100%;
+//         padding: 0.7rem 1rem;
+//       }
+//     }
+
+//     .date-filters {
+//       form {
+//         position: relative;
+//         .date-input {
+//           width: 100vw;
+//           padding-left: 2.5rem;
+//         }
+//         .calendar-icon {
+//           position: absolute;
+//           left: 10px;
+//           top: 50%;
+//           transform: translateY(-50%);
+//         }
+//       }
+//       span {
+//         display: none;
+//       }
+//     }
+//   }
+// }
+
+// @media (min-width: 820px) and (max-width: 1024px) {
+//   .controls {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: stretch;
+//     padding: 0;
+
+//     .control-item {
+//       margin-bottom: 10px;
+//     }
+
+//     // .search-div {
+//     //   .search-bar {
+//     //     width: 100%;
+//     //     position: relative;
+//     //     input {
+//     //       width: calc(100% - 2.5rem);
+//     //       padding-left: 2.5rem;
+//     //     }
+//     //     .search-icon {
+//     //       position: absolute;
+//     //       left: 10px;
+//     //       top: 50%;
+//     //       transform: translateY(-50%);
+//     //     }
+//     //   }
+//     // }
+
+//     .filter-dropdown {
+//       select {
+//         width: 100%;
+//         margin-left: 0;
+//       }
+//     }
+
+//     .date-filters {
+//       form {
+//         width: 100%;
+//         position: relative;
+//         .date-input {
+//           width: 46rem;
+//           padding-left: 2.5rem;
+//         }
+//         .calendar-icon {
+//           position: absolute;
+//           left: 10px;
+//           top: 50%;
+//           transform: translateY(-50%);
+//         }
+//       }
+//       span {
+//         display: none;
+//       }
+//     }
+//   }
+// }
+
 @media (max-width: 768px) {
   .controls {
     flex-direction: column;
     align-items: stretch;
     padding: 0;
+
     .control-item {
       margin-bottom: 10px;
       flex: 1;
       justify-content: center;
     }
-    .search-div {
-      .search-bar {
-        width: 100%;
-        position: relative;
-        input {
-          // width: calc(100% - 2.4rem); // Adjust for padding
-          width: 100%;
-          padding-left: 2.5rem; // Adjust padding to accommodate the search icon
-        }
-        .search-icon {
-          position: absolute;
-          left: 0.5rem;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-      }
-    }
+
     .filter-dropdown {
       select {
         width: 90%;
-        margin-left: 1rem;
       }
     }
+
     .date-filters {
       display: flex;
       flex-direction: column;
       align-items: center;
+
       form {
         width: 100%;
         position: relative;
-        input {
-          width: 100%; // Adjust for padding
+
+        .date-input {
+          width: 100%;
           padding-left: 2.5rem;
           margin-bottom: 0.5rem;
         }
+
         .calendar-icon {
           position: absolute;
           left: 0.5rem;
@@ -239,8 +351,9 @@ $input-border-radius: 4px;
           transform: translateY(-50%);
         }
       }
+
       span {
-        display: none; // Hide the separator on small screens
+        display: none;
       }
     }
   }
@@ -248,48 +361,37 @@ $input-border-radius: 4px;
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .controls {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     padding: 0;
 
     .control-item {
       align-items: center;
       padding: 0;
-      justify-content: center;
-    }
-
-    .search-div {
-      .search-bar {
-        width: 100%;
-        position: relative;
-        input {
-          width: 100%;
-          padding-left: 2.5rem;
-        }
-        .search-icon {
-          position: absolute;
-          left: 10px;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-      }
     }
 
     .filter-dropdown {
       select {
-        width: 100%;
+        width: 50%;
         padding: 0.7rem 1rem;
       }
     }
 
     .date-filters {
+      display: flex;
+      align-items: center;
+
       form {
         position: relative;
-        input {
-          width: 100%;
-          padding: 0.7rem 2.1rem;
+        margin-right: 1rem;
+
+        .date-input {
+          width: calc(50% - 2.5rem);
+          padding-left: 2.5rem;
         }
+
         .calendar-icon {
           position: absolute;
           left: 10px;
@@ -297,65 +399,9 @@ $input-border-radius: 4px;
           transform: translateY(-50%);
         }
       }
+
       span {
-        display: none;
-      }
-    }
-  }
-}
-
-@media (min-width: 820px) and (max-width: 1024px) {
-  .controls {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    padding: 0;
-
-    .control-item {
-      margin-bottom: 10px;
-    }
-
-    .search-div {
-      .search-bar {
-        width: 100%;
-        position: relative;
-        input {
-          width: calc(100% - 2.5rem);
-          padding-left: 2.5rem;
-        }
-        .search-icon {
-          position: absolute;
-          left: 10px;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-      }
-    }
-
-    .filter-dropdown {
-      select {
-        width: 100%;
-        margin-left: 0;
-      }
-    }
-
-    .date-filters {
-      form {
-        width: 100%;
-        position: relative;
-        input {
-          width: 100%;
-          padding-left: 2.5rem;
-        }
-        .calendar-icon {
-          position: absolute;
-          left: 10px;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-      }
-      span {
-        display: none;
+        margin: 0 1rem;
       }
     }
   }
