--- a/src/components/modules/admin/login/index.scss
+++ b/src/components/modules/admin/login/index.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
-
+// Base styles
 .grid-container-signIn {
-  display: inline-flex;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 100%;
@@ -15,6 +15,7 @@
     width: 800px;
     background-color: #00b8bf0d;
     margin-left: 200px;
+
     .big-image {
       width: 500px;
       height: 100%;
@@ -69,13 +70,13 @@
 }
 
 .grid-item-signin {
-  display: inline-flex;
+  display: flex;
   justify-content: flex-end;
   align-items: center;
   gap: 20px;
   padding: 10px;
   background-color: white;
-  margin-top: 0px;
+  margin-top: 0;
   height: 80vh;
 }
 
@@ -104,7 +105,7 @@
       height: 44px;
       margin-left: 30px;
     }
-
+     
     .admins {
       font-family: 'Inter';
       font-weight: 500;
@@ -114,6 +115,35 @@
       background: white;
     }
   }
+
+  @media (max-width: 1024px){.docuadmin {
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    width: 100%;
+    height: 40%;
+    margin-left: 30px;
+
+    .logoImage {
+      width: 180px;
+      height: 44px;
+      margin-left: 30px;
+    }
+     
+    .admins {
+      font-family: 'Inter';
+      font-weight: 500;
+      font-size: 22px;
+      text-align: -70px;
+      margin-right: 50px;
+      background: white;
+    }
+  }
+  }
+  
 
   .form-propers {
     margin-left: 120px;
@@ -132,23 +162,14 @@
 
     .bongus {
       margin: 20px 0;
-      // background-color: #f4f4f6;
+      background-color: white;
       border-radius: 4px;
       border: 1px transparent;
     }
 
-    .label {
-      color: #000;
-      font-family: 'Inter', sans-serif;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 24px;
-      letter-spacing: -0.16px;
-    }
-
     .bolala {
       color: grey;
-      width: 450px;
+      width: 100%;
       height: 48px;
       display: flex;
       font-family: 'Lato', sans-serif;
@@ -166,15 +187,72 @@
       font-size: 14px;
       font-weight: 400;
       padding-left: 16px;
-      padding-top: 15px;
+      padding-top: 8px;
+      background-color: #f4f4f6;
     }
 
+    
+    .bolale::placeholder {
+      font-family: 'Inter', sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      padding-left: 16px;
+      padding-top: 3px;
+      background-color: #f4f4f6;
+      padding-left: 16px;
+      
+    }
+
+    .bonga {
+      margin: 20px 0;
+      border-radius: 4px;
+      border: 1px transparent;
+    }
+    
+    .label {
+      color: #000;
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: -0.16px;
+    }
+    
+    .password-input-container {
+      position: relative;
+      width: 100%; 
+    }
+    
+    .bolale {
+      color: grey;
+      width: 100%;
+      height: 48px;
+      display: flex;
+      font-family: 'Lato', sans-serif;
+      line-height: 24px;
+      letter-spacing: -0.16px;
+      border: 1px transparent;
+      background-color: #f4f4f6;
+      border-radius: 6px;
+      padding-left: 1rem;
+      padding-right: 2.5rem;
+    }
+    
+    .bolale::placeholder {
+      font-family: 'Inter', sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      padding-left: 16px;
+      padding-top: 15px;
+    }
+    
     .passwordimg {
       position: absolute;
-      top: 45%;
+      right: 10px;
+      top: 50%;
       transform: translateY(-50%);
-      left: 538px;
-      z-index: 1;
+      width: 20px;
+      height: 20px; 
     }
 
     .button-cta {
@@ -193,6 +271,103 @@
       font-size: 14px;
       font-weight: 600;
       line-height: 20px;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .grid-container-signIn {
+    flex-direction: column;
+    align-items: center;
+
+    .container-images {
+      display: none; 
+    }
+  }
+
+  .grid-item-signin {
+    justify-content: center;
+    height: auto;
+    padding: 20px;
+  }
+
+  .form-tables {
+    width: 90%;
+    margin: 0;
+    padding: 20px;
+
+    .form-propers {
+      width: 100%;
+      margin-left: 0;
+
+      .signintxt {
+        font-size: 36px;
+        text-align: center;
+      }
+
+      .bolala {
+        width: 100%;
+      }
+
+      .button-cta {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .grid-container-signIn {
+    flex-direction: column;
+    align-items: center;
+    background-color: #00b8bf0d; 
+    .container-images {
+      display: none; 
+    }
+  }
+
+  .grid-item-signin {
+    justify-content: center;
+    height: auto;
+    padding: 20px;
+  }
+
+  .form-tables {
+    width: 90%;
+    margin: 0;
+    padding: 20px;
+
+    .docuadmin {
+      flex-direction: column;
+      align-items: center;
+      margin-left: 0;
+      text-align: center;
+
+      .logoImage {
+        margin: 0;
+      }
+
+      .admins {
+        margin: 0;
+      }
+    }
+
+    .form-propers {
+      width: 100%;
+      margin-left: 0;
+
+      .signintxt {
+        font-size: 28px;
+        text-align: center;
+      }
+
+      .bolala {
+        width: 100%;
+      }
+
+      .button-cta {
+        width: 100%;
+      }
     }
   }
 }
