--- a/src/components/modules/admin/templatesDownload/index.scss
+++ b/src/components/modules/admin/templatesDownload/index.scss
@@ -195,155 +195,51 @@ $input-border-radius: 4px;
 //     }
 //   }
 // }
-
-// @media (min-width: 769px) and (max-width: 1024px) {
-//   .controls {
-//     display: grid;
-//     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-//     gap: 1rem;
-//     padding: 0;
-
-//     .control-item {
-//       align-items: center;
-//       padding: 0;
-//       justify-content: center;
-//     }
-
-//     // .search-div {
-//     //   // .search-bar {
-//     //   //   width: 100%;
-//     //   //   position: relative;
-//     //   //   input {
-//     //   //     width: 100%;
-//     //   //     padding-left: 2.5rem;
-//     //   //   }
-//     //   //   .search-icon {
-//     //   //     position: absolute;
-//     //   //     left: 0.5rem;
-//     //   //     top: 50%;
-//     //   //     transform: translateY(-50%);
-//     //   //   }
-//     //   // }
-//     // }
-
-//     .filter-dropdown {
-//       select {
-//         width: 100%;
-//         padding: 0.7rem 1rem;
-//       }
-//     }
-
-//     .date-filters {
-//       form {
-//         position: relative;
-//         .date-input {
-//           width: 100vw;
-//           padding-left: 2.5rem;
-//         }
-//         .calendar-icon {
-//           position: absolute;
-//           left: 10px;
-//           top: 50%;
-//           transform: translateY(-50%);
-//         }
-//       }
-//       span {
-//         display: none;
-//       }
-//     }
-//   }
-// }
-
-// @media (min-width: 820px) and (max-width: 1024px) {
-//   .controls {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: stretch;
-//     padding: 0;
-
-//     .control-item {
-//       margin-bottom: 10px;
-//     }
-
-//     // .search-div {
-//     //   .search-bar {
-//     //     width: 100%;
-//     //     position: relative;
-//     //     input {
-//     //       width: calc(100% - 2.5rem);
-//     //       padding-left: 2.5rem;
-//     //     }
-//     //     .search-icon {
-//     //       position: absolute;
-//     //       left: 10px;
-//     //       top: 50%;
-//     //       transform: translateY(-50%);
-//     //     }
-//     //   }
-//     // }
-
-//     .filter-dropdown {
-//       select {
-//         width: 100%;
-//         margin-left: 0;
-//       }
-//     }
-
-//     .date-filters {
-//       form {
-//         width: 100%;
-//         position: relative;
-//         .date-input {
-//           width: 46rem;
-//           padding-left: 2.5rem;
-//         }
-//         .calendar-icon {
-//           position: absolute;
-//           left: 10px;
-//           top: 50%;
-//           transform: translateY(-50%);
-//         }
-//       }
-//       span {
-//         display: none;
-//       }
-//     }
-//   }
-// }
-
 @media (max-width: 768px) {
   .controls {
     flex-direction: column;
     align-items: stretch;
     padding: 0;
-
     .control-item {
       margin-bottom: 10px;
       flex: 1;
       justify-content: center;
     }
-
-    .filter-dropdown {
-      select {
-        width: 90%;
+    .search-div {
+      .search-bar {
+        width: 100%; /* Ensure the search bar takes full width */
+        position: relative;
+        input {
+          width: 100%; /* Make the input field take full width */
+          padding-left: 2.5rem; /* Adjust padding as needed */
+        }
+        .unique-search-icon {
+          position: absolute;
+          left: 0.5rem;
+          top: 50%;
+          transform: translateY(-50%);
+        }
       }
     }
-
+    .filter-dropdown {
+      select {
+        width: 90%; /* Adjust width as needed */
+      }
+    }
     .date-filters {
       display: flex;
       flex-direction: column;
       align-items: center;
-
       form {
-        width: 100%;
+        width: 100%; /* Ensure the form takes full width */
         position: relative;
-
         .date-input {
-          width: 100%;
-          padding-left: 2.5rem;
+          display: grid;
+          grid-template-row: 1fr 1fr;
+          width: 100%; /* Make the date input field take full width */
+          padding-left: 2.5rem; /* Adjust padding as needed */
           margin-bottom: 0.5rem;
         }
-
         .calendar-icon {
           position: absolute;
           left: 0.5rem;
@@ -351,7 +247,6 @@ $input-border-radius: 4px;
           transform: translateY(-50%);
         }
       }
-
       span {
         display: none;
       }
@@ -361,37 +256,48 @@ $input-border-radius: 4px;
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .controls {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
     padding: 0;
 
     .control-item {
       align-items: center;
       padding: 0;
+      justify-content: center;
     }
+
+    // .search-div {
+    //   // .search-bar {
+    //   //   width: 100%;
+    //   //   position: relative;
+    //   //   input {
+    //   //     width: 100%;
+    //   //     padding-left: 2.5rem;
+    //   //   }
+    //   //   .search-icon {
+    //   //     position: absolute;
+    //   //     left: 0.5rem;
+    //   //     top: 50%;
+    //   //     transform: translateY(-50%);
+    //   //   }
+    //   // }
+    // }
 
     .filter-dropdown {
       select {
-        width: 50%;
+        width: 100%;
         padding: 0.7rem 1rem;
       }
     }
 
     .date-filters {
-      display: flex;
-      align-items: center;
-
       form {
         position: relative;
-        margin-right: 1rem;
-
         .date-input {
-          width: calc(50% - 2.5rem);
+          width: 100vw;
           padding-left: 2.5rem;
         }
-
         .calendar-icon {
           position: absolute;
           left: 10px;
@@ -399,10 +305,165 @@ $input-border-radius: 4px;
           transform: translateY(-50%);
         }
       }
-
       span {
-        margin: 0 1rem;
+        display: none;
       }
     }
   }
 }
+
+@media (min-width: 820px) and (max-width: 1024px) {
+  .controls {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0;
+
+    .control-item {
+      margin-bottom: 10px;
+    }
+
+    // .search-div {
+    //   .search-bar {
+    //     width: 100%;
+    //     position: relative;
+    //     input {
+    //       width: calc(100% - 2.5rem);
+    //       padding-left: 2.5rem;
+    //     }
+    //     .search-icon {
+    //       position: absolute;
+    //       left: 10px;
+    //       top: 50%;
+    //       transform: translateY(-50%);
+    //     }
+    //   }
+    // }
+
+    .filter-dropdown {
+      select {
+        width: 100%;
+        margin-left: 0;
+      }
+    }
+
+    .date-filters {
+      form {
+        width: 100%;
+        position: relative;
+        .date-input {
+          width: 46rem;
+          padding-left: 2.5rem;
+        }
+        .calendar-icon {
+          position: absolute;
+          left: 10px;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+      span {
+        display: none;
+      }
+    }
+  }
+}
+
+// @media (max-width: 768px) {
+//   .controls {
+//     flex-direction: column;
+//     align-items: stretch;
+//     padding: 0;
+
+//     .control-item {
+//       margin-bottom: 10px;
+//       flex: 1;
+//       justify-content: center;
+//     }
+
+//     .filter-dropdown {
+//       select {
+//         //   width: 80%;
+//         width: 13rem;
+//         //  margin-left: 2rem;
+//         //  padding: 0.7rem 1rem;
+//       }
+//     }
+
+//     .date-filters {
+//       display: flex;
+//       flex-direction: column;
+//       align-items: stretch;
+
+//       form {
+//         width: 100%;
+//         position: relative;
+
+//         .date-input {
+//           width: 20rem;
+//           padding-left: 2.5rem;
+//           margin-bottom: 0.5rem;
+//         }
+
+//         .calendar-icon {
+//           position: absolute;
+//           left: 0.5rem;
+//           top: 50%;
+//           transform: translateY(-50%);
+//         }
+//       }
+
+//       span {
+//         display: none;
+//       }
+//     }
+//   }
+// }
+
+// @media (min-width: 769px) and (max-width: 1024px) {
+//   .controls {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: center;
+//     justify-content: space-between;
+//     padding: 0;
+
+//     .control-item {
+//       align-items: center;
+//       padding: 0;
+//     }
+
+//     .filter-dropdown {
+//       select {
+//         width: 50%;
+//         padding: 0.7rem 1rem;
+//       }
+//     }
+
+//     .date-filters {
+//       display: flex;
+//       align-items: center;
+
+//       form {
+//         position: relative;
+//         margin-right: 1rem;
+
+//         .date-input {
+//           width: calc(50% - 2.5rem);
+//           padding-left: 2.5rem;
+//         }
+
+//         .calendar-icon {
+//           position: absolute;
+//           left: 10px;
+//           top: 50%;
+//           transform: translateY(-50%);
+//         }
+//       }
+
+//       span {
+//         margin: 0 1rem;
+//       }
+//     }
+//   }
+// }
