--- a/src/components/modules/admin/login/index.scss
+++ b/src/components/modules/admin/login/index.scss
@@ -105,7 +105,7 @@
       height: 44px;
       margin-left: 30px;
     }
-     
+
     .admins {
       font-family: 'Inter';
       font-weight: 500;
@@ -116,34 +116,34 @@
     }
   }
 
-  @media (max-width: 1024px){.docuadmin {
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: 5px;
-    width: 100%;
-    height: 40%;
-    margin-left: 30px;
-
-    .logoImage {
-      width: 180px;
-      height: 44px;
+  @media (max-width: 1024px) {
+    .docuadmin {
+      background-color: white;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      gap: 5px;
+      width: 100%;
+      height: 40%;
       margin-left: 30px;
-    }
-     
-    .admins {
-      font-family: 'Inter';
-      font-weight: 500;
-      font-size: 22px;
-      text-align: -70px;
-      margin-right: 50px;
-      background: white;
+
+      .logoImage {
+        width: 180px;
+        height: 44px;
+        margin-left: 30px;
+      }
+
+      .admins {
+        font-family: 'Inter';
+        font-weight: 500;
+        font-size: 22px;
+        text-align: -70px;
+        margin-right: 50px;
+        background: white;
+      }
     }
   }
-  }
-  
 
   .form-propers {
     margin-left: 120px;
@@ -191,7 +191,6 @@
       background-color: #f4f4f6;
     }
 
-    
     .bolale::placeholder {
       font-family: 'Inter', sans-serif;
       font-size: 14px;
@@ -200,7 +199,6 @@
       padding-top: 3px;
       background-color: #f4f4f6;
       padding-left: 16px;
-      
     }
 
     .bonga {
@@ -208,7 +206,7 @@
       border-radius: 4px;
       border: 1px transparent;
     }
-    
+
     .label {
       color: #000;
       font-family: 'Inter', sans-serif;
@@ -217,12 +215,12 @@
       line-height: 24px;
       letter-spacing: -0.16px;
     }
-    
+
     .password-input-container {
       position: relative;
-      width: 100%; 
+      width: 100%;
     }
-    
+
     .bolale {
       color: grey;
       width: 100%;
@@ -237,7 +235,7 @@
       padding-left: 1rem;
       padding-right: 2.5rem;
     }
-    
+
     .bolale::placeholder {
       font-family: 'Inter', sans-serif;
       font-size: 14px;
@@ -245,14 +243,14 @@
       padding-left: 16px;
       padding-top: 15px;
     }
-    
+
     .passwordimg {
       position: absolute;
       right: 10px;
       top: 50%;
       transform: translateY(-50%);
       width: 20px;
-      height: 20px; 
+      height: 20px;
     }
 
     .button-cta {
@@ -281,7 +279,7 @@
     align-items: center;
 
     .container-images {
-      display: none; 
+      display: none;
     }
   }
 
@@ -320,9 +318,11 @@
   .grid-container-signIn {
     flex-direction: column;
     align-items: center;
-    background-color: #00b8bf0d; 
+    background-color: #00b8bf0d;
+
+    height: 100vh;
     .container-images {
-      display: none; 
+      display: none;
     }
   }
 
