[updates]: Updated template creation components and styling, started Faqs and contact form modal

--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -11,9 +11,11 @@
   }
 
   &__text {
-    max-width: 30%;
+    //  max-width: 30%;
     //margin-left: auto;
-    padding: 80px 73px 54px;
+    //padding: 80px 73px 54px;
+
+    padding: 6rem 3.5rem 3.5rem;
     width: 35vw;
 
     @include mobile(1105px) {
@@ -24,6 +26,11 @@
     @include mobile(600px) {
       padding: 60px 20px;
     }
+  }
+
+  &.full-width {
+    max-width: 50%;
+    width: 60vw; // New style for full-width condition
   }
 }
 
@@ -38,7 +45,7 @@
 
 .invoice-back-button {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: 8px;
 
   p {
@@ -61,6 +68,9 @@
       width: 5px;
       height: 9px;
     }
+  }
+  .back-button:hover {
+    background: #4eb9c0;
   }
 }
 
@@ -118,7 +128,7 @@
 .template-container {
   background: linear-gradient(282.33deg, #eafafe 52.56%, #f2fdfa 115.44%);
   flex: 1;
-  max-width: 70vw;
+  //max-width: 65vw;
   padding: 40px 20px 0;
 
   @include mobile(1105px) {
@@ -131,7 +141,7 @@
   }
 
   .template-image {
-    background: var(--white) !important;
+    background: var(--white);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -139,9 +149,7 @@
     border: 1px solid #f6f6f6;
     min-height: 100vh;
     margin: 0 auto;
-    // max-width: 512px;
     max-width: 90%;
-    //width: 70%;
 
     @include mobile(1105px) {
       min-height: 50vh;
@@ -152,8 +160,12 @@
     }
 
     &__text {
-      max-width: 70%;
-      opacity: 30%;
+      // max-width: 70%;
+      //   opacity: 30%;
+      padding: 0 2.7rem;
+      font-family: Inter;
+      //  font-size: 0.8rem;
+      font-weight: 500;
       overflow: hidden;
       text-align: center;
     }
@@ -195,8 +207,8 @@
 
   //max-width: 511px;
   background-color: #ffffff;
-  padding: 2.5rem;
-  border-radius: 10px; // Adjust radius as needed
+  padding: 1rem 1rem;
+  border-radius: 10px;
   border: 1px solid #f0ecf5;
 
   @include mobile(600px) {
@@ -224,10 +236,8 @@
 
 .direction-buttons {
   display: flex;
-  align-items: center;
-  gap: 32px;
-  border-top: 1px solid var(--border3);
-  padding-top: 40px;
+  justify-content: flex-end; /* Aligns the buttons to the right */
+  gap: 10px; /* Optional: Adds space between the buttons */
 
   &__noboder {
     border-top: none !important;
@@ -239,6 +249,21 @@
 
   @include mobile(600px) {
     padding-top: 30px;
+  }
+
+  .invoice-back-button {
+    display: flex;
+    align-items: center;
+
+    .back-button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .back-icon {
+      transform: rotate(180deg); /* Optional: Rotates the icon */
+    }
   }
 }
 
@@ -302,6 +327,223 @@
     p {
       max-width: 178px;
       color: var(--dark);
+    }
+  }
+}
+
+/* New styles for ProgressBar and ContactSection */
+.progress-bar {
+  margin-top: -7.2rem;
+  margin-bottom: 24px;
+  text-align: left;
+  width: 100%;
+
+  @include mobile(600px) {
+    padding-top: 3rem;
+  }
+
+  p {
+    font-weight: 400;
+    font-size: 1.375rem;
+    font-family: 'PT Serif', serif;
+  }
+
+  &__container {
+    background-color: #e0f3f3;
+    border-radius: 5px;
+    padding: 1px;
+    margin-top: 10px;
+  }
+
+  &__fill {
+    background-color: #4eb9c0;
+    width: 10%;
+    height: 10px;
+    border-radius: 5px;
+  }
+}
+
+/* Template Modal Styles */
+.template-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.template-modal-content {
+  background: #fff;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 700px;
+  padding: 2.2rem;
+  position: relative;
+
+  .template-modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    &-text {
+      display: block;
+
+      h2 {
+        margin: 0;
+      }
+
+      p {
+        margin-top: 1.5rem;
+        margin-bottom: 1.4rem;
+      }
+    }
+
+    .template-modal-close {
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+    }
+  }
+
+  .template-modal-body {
+    margin-top: 20px;
+
+    .template-accordion {
+      margin-top: 20px;
+
+      .template-accordion-item {
+        background: #f9fafa;
+        border-bottom: none;
+        margin-bottom: 1rem;
+        padding: 0.7rem 1.3rem;
+        border: 1px solid #f0f2f3;
+
+        border-radius: 0.6rem;
+
+        .template-accordion-header {
+          display: flex;
+          justify-content: space-between;
+          cursor: pointer;
+          padding: 10px 0;
+          font-family: PT Serif;
+          font-weight: 800;
+          font-size: 1.2rem;
+        }
+
+        .template-accordion-body {
+          padding: 10px 0;
+        }
+      }
+    }
+  }
+
+  .template-modal-footer {
+    text-align: center;
+    margin-top: 20px;
+
+    h1 {
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+
+    .contact-button {
+      background-color: var(--primary);
+      padding: 1rem 0;
+      border-radius: 5px;
+      color: #00b8bf;
+      font-weight: 600;
+      text-decoration: underline;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+
+      svg {
+        margin-left: 5px;
+      }
+    }
+  }
+}
+
+/* Contact Section Styles */
+.contact-section {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid #f0ecf5;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  text-align: left;
+  margin-top: 10rem;
+
+  h1 {
+    margin-bottom: 8px;
+    font-family: PT Serif;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 31.06px;
+  }
+
+  p {
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.36px;
+  }
+
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+
+    input,
+    textarea {
+      width: 80%;
+      margin-bottom: 15px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+    button {
+      width: 80%;
+      padding: 10px;
+      color: var(--white);
+      background-color: #0e2557;
+      border: none;
+      border-radius: 1.5rem;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+
+  .contact-button {
+    background-color: var(--primary);
+    padding: 1.7rem 0;
+    border-radius: 5px;
+    color: #00b8bf;
+    font-weight: 600;
+    text-decoration: underline;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    svg {
+      margin-left: 5px;
     }
   }
 }
