--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -381,8 +381,8 @@
   background: #fff;
   border-radius: 8px;
   width: 90%;
-  max-width: 700px;
-  padding: 2.2rem;
+  max-width: 500px;
+  padding: 2rem;
   position: relative;
 
   .template-modal-header {
@@ -405,7 +405,9 @@
 
     .template-modal-close {
       background: none;
-      border: none;
+      border: 2px solid #0E2557;
+      padding: 0.17rem 0.56rem;
+      border-radius: 50%;
       font-size: 24px;
       cursor: pointer;
     }
@@ -434,10 +436,21 @@
           font-family: PT Serif;
           font-weight: 800;
           font-size: 1.2rem;
+
+          svg{
+            border: 1px solid #CFD3DD;
+            border-radius: 50%;
+            padding: 0.15rem;
+
+          }
         }
 
         .template-accordion-body {
           padding: 10px 0;
+          font-family: Inter;
+          color: #1C1C1C;
+          font-size: 0.9rem;
+
         }
       }
     }
