--- a/src/components/modules/public/customiseDocument/index.scss
+++ b/src/components/modules/public/customiseDocument/index.scss
@@ -1,4 +1,4 @@
-@import "../../../../assets/styles/mixins.scss";
+@import '../../../../assets/styles/mixins.scss';
 
 .choose-document-type {
   &__text {
@@ -15,11 +15,44 @@
 .document-thank-text {
   margin-top: 20px;
   text-align: center;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   color: var(--text);
   font-weight: 400;
 }
 
 .document-thank-button {
   margin: 40px auto 60px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: #555;
+}
+
+input[type='text'],
+input[type='date'],
+select,
+input[type='radio'] + label {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background-color: #f9f9f9;
+}
+
+select[multiple] {
+  height: auto;
+  background-color: #fff;
+}
+
+input[type='radio'] {
+  margin-right: 10px;
+}
+
+input[type='radio'] + label {
+  display: inline-block;
+  margin-right: 15px;
 }
