[Updates : added styles for the calendar icon and jsx]

--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -250,6 +250,24 @@
       min-height: 100px;
     }
   }
+
+  .react-datepicker-wrapper {
+    width: 100%;
+    input {
+      width: 100%; // Ensure input fields take up full width
+      margin-bottom: 15px;
+      font-family: Inter;
+      font-weight: 400;
+      padding: 10px 40px 10px 10px; // Adjust padding for the calendar icon
+      border: 1px solid #cfd3dd;
+      border-radius: 5px;
+      font-size: 1rem;
+      background-image: url('../Images/Calendar.svg'); //calendar
+      background-repeat: no-repeat;
+      background-position: right 10px center; // icon position
+    }
+  }
+
   &__multi-insert {
     display: flex;
     flex-direction: column;
