--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -20,7 +20,7 @@
     .template-image {
       width: 100%;
       max-width: 100%;
-      // display: inline-block;
+      display: block;
       margin: 0 auto;
     }
   }
