update: Added required attribute to each input field

--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -304,7 +304,7 @@
 .direction-buttons {
   display: flex;
   justify-content: flex-end; /* Aligns the buttons to the right */
-  gap: 10px; /* Optional: Adds space between the buttons */
+  gap: 10px; /*  Adds space between the buttons */
 
   &__noboder {
     border-top: none !important;
